--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <Button
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
@@ -49,7 +50,11 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button"/>
     </LinearLayout>
-
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button"/>
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
